{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 45,
  "lineage": "61e18c80-06a7-eb9c-26f3-44cbe772ebda",
  "resources": [
    {
      "module": "module.hello_world_app",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:935838525253:vpc/vpc-c330c9a8",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-e437cc8f",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-438f5d28",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-c330c9a8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-4fe56424",
            "owner_id": "935838525253"
          }
        }
      ]
    },
    {
      "module": "module.hello_world_app",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:935838525253:targetgroup/hello-world-test-fVmXFs/f67f229350b95c9a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:935838525253:listener-rule/app/hello-world-test-fVmXFs/3445ea394fea055a/d5de379a47cca18e/888c87e2cea61103",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:935838525253:listener-rule/app/hello-world-test-fVmXFs/3445ea394fea055a/d5de379a47cca18e/888c87e2cea61103",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:935838525253:listener/app/hello-world-test-fVmXFs/3445ea394fea055a/d5de379a47cca18e",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hello_world_app.aws_lb_target_group.asg",
            "module.hello_world_app.data.aws_subnets.default",
            "module.hello_world_app.data.aws_vpc.default",
            "module.hello_world_app.module.alb.aws_lb.example",
            "module.hello_world_app.module.alb.aws_lb_listener.http",
            "module.hello_world_app.module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.hello_world_app",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:935838525253:targetgroup/hello-world-test-fVmXFs/f67f229350b95c9a",
            "arn_suffix": "targetgroup/hello-world-test-fVmXFs/f67f229350b95c9a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:935838525253:targetgroup/hello-world-test-fVmXFs/f67f229350b95c9a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "hello-world-test-fVmXFs",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-c330c9a8"
          },
          "dependencies": [
            "module.hello_world_app.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.hello_world_app.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:935838525253:loadbalancer/app/hello-world-test-fVmXFs/3445ea394fea055a",
            "arn_suffix": "app/hello-world-test-fVmXFs/3445ea394fea055a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "hello-world-test-fVmXFs-74799902.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:935838525253:loadbalancer/app/hello-world-test-fVmXFs/3445ea394fea055a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hello-world-test-fVmXFs",
            "security_groups": [
              "sg-02d919fa71059e88b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-4cf37500"
              },
              {
                "subnet_id": "subnet-601eff0b"
              },
              {
                "subnet_id": "subnet-6ff6a915"
              }
            ],
            "subnets": [
              "subnet-4cf37500",
              "subnet-601eff0b",
              "subnet-6ff6a915"
            ],
            "vpc_id": "vpc-c330c9a8",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.hello_world_app.data.aws_subnets.default",
            "module.hello_world_app.module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.hello_world_app.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:935838525253:listener/app/hello-world-test-fVmXFs/3445ea394fea055a/d5de379a47cca18e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:935838525253:listener/app/hello-world-test-fVmXFs/3445ea394fea055a/d5de379a47cca18e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:935838525253:loadbalancer/app/hello-world-test-fVmXFs/3445ea394fea055a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hello_world_app.data.aws_subnets.default",
            "module.hello_world_app.module.alb.aws_lb.example",
            "module.hello_world_app.module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.hello_world_app.module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:935838525253:security-group/sg-02d919fa71059e88b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02d919fa71059e88b",
            "ingress": [],
            "name": "hello-world-test-fVmXFs",
            "name_prefix": "",
            "owner_id": "935838525253",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-c330c9a8"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.hello_world_app.module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2699122735",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02d919fa71059e88b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hello_world_app.module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.hello_world_app.module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1720763552",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02d919fa71059e88b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hello_world_app.module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.hello_world_app.module.asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:935838525253:security-group/sg-0608de17c57b47741",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0608de17c57b47741",
            "ingress": [],
            "name": "hello-world-test-fVmXFs-instance",
            "name_prefix": "",
            "owner_id": "935838525253",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-c330c9a8"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.hello_world_app.module.asg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_server_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-3436326836",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0608de17c57b47741",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hello_world_app.module.asg.aws_security_group.instance"
          ]
        }
      ]
    }
  ]
}